# vulkan-renderer

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODOs.md  pose-ideas.md
liceneses/: pony.txt
src/: CMakeLists.txt  aabb.cc  aabb.h  animation.h  app.cc  app.h  asserts.cc  asserts.h  assets.cc  assets.h  biped-rig.cc  biped-rig.h  buffers.cc  buffers.h  command-buffers.cc  command-buffers.h  debug-draws.cc  debug-draws.h  defines.h  descriptors.cc  descriptors.h  draws.cc  draws.h  entities.cc  entities.h  fbo.cc  fbo.h  files.h  frame-state.h  glm-include.h  grid.h  hash.h  hello_triangle_app.h  images.cc  images.h  imgui-helpers.cc  imgui-helpers.h  input.cc  input.h  instances.h  (+44 more)
src/shaders/: CMakeLists.txt  circle.frag  colors.glsl  cube-gradient.frag  cubemap.vert  depth.frag  draw-2d.frag  draw-2d.glsl  draw-2d.vert  edge-maths.glsl  edges-fxaa.frag  edges-prepass.frag  edges.frag  fullscreen.vert  jf-sdf.frag  jf-step.frag  maths.glsl  normals.frag  post.frag  resolve.frag  sample-query.frag  sample.frag  scene-basic.frag  scene-basic.vert  scene-gradient.frag  scene.frag  scene.vert  shader.frag  shader.vert  shadow.glsl  shadow.vert  structs.glsl  uv-sample.frag  voronoi-seed.frag  voronoi.frag  voronoi.vert
tests/: CMakeLists.txt  aabb-tests.cc
